arm64: dts: Reduce panel-on delay
 * Based on https://github.com/kerneltoast/android_kernel_google_wahoo/commit/a88bb7bd488d104785b9200d8abeae066acd2315

Signed-off-by: celtare21 <celtare21@gmail.com>
(cherry picked from commit 9e76be5b42a3f4189a90f28ff892f3c48abe7970)
(cherry picked from commit c1ab5a5985b3ac5908e39b3d45a6ce641e4df299)

--- a/arch/arm64/boot/dts/google/dsi-panel-s6e3hc2-dsc-wqhd-cmd.dtsi
+++ b/arch/arm64/boot/dts/google/dsi-panel-s6e3hc2-dsc-wqhd-cmd.dtsi
@@ -71,7 +71,7 @@
 				qcom,mdss-dsi-v-pulse-width = <4>;
 				qcom,mdss-dsi-on-command = [
 					07 01 00 00 00 00 01 01    /* Compression Enable */
-					05 01 00 00 78 00 01 11    /* sleep out, Wait 120 ms */
+					05 01 00 00 05 00 01 11    /* sleep out, Wait 5 ms */
 					15 01 00 00 00 00 02 53 20 /* write ctl 60hz */
 					15 01 00 00 00 00 02 35 00 /* TE on */
 
@@ -101,7 +101,7 @@
 				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-off-command = [
 					05 01 00 00 0A 00 01 28    /* display off */
-					05 01 00 00 78 00 01 10    /* sleep in */
+					05 01 00 00 5A 00 01 10    /* sleep in */
 				];
 				qcom,mdss-dsi-off-command-state = "dsi_lp_mode";
 
@@ -169,7 +169,7 @@
 				qcom,mdss-dsi-v-pulse-width = <4>;
 				qcom,mdss-dsi-on-command = [
 					07 01 00 00 00 00 01 01    /* Compression Enable */
-					05 01 00 00 78 00 01 11    /* sleep out, Wait 120 ms */
+					05 01 00 00 05 00 01 11    /* sleep out, Wait 5 ms */
 					15 01 00 00 00 00 02 53 30 /* write ctl 90hz */
 					15 01 00 00 00 00 02 35 00 /* TE on */
 
@@ -199,7 +199,7 @@
 				qcom,mdss-dsi-on-command-state = "dsi_lp_mode";
 				qcom,mdss-dsi-off-command = [
 					05 01 00 00 0A 00 01 28    /* display off */
-					05 01 00 00 78 00 01 10    /* sleep in */
+					05 01 00 00 5A 00 01 10    /* sleep in */
 				];
 				qcom,mdss-dsi-off-command-state = "dsi_lp_mode";
 
